ClojureExtension/Editor/Tagger/ClojureParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\Jon\\Desktop\\Clojure.g 2010-10-01 12:57:09

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using System.Collections;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;


public partial class ClojureParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"OPEN_PAREN", 
		"CLOSE_PAREN", 
		"AMPERSAND", 
		"LEFT_SQUARE_BRACKET", 
		"RIGHT_SQUARE_BRACKET", 
		"LEFT_CURLY_BRACKET", 
		"RIGHT_CURLY_BRACKET", 
		"BACKSLASH", 
		"CIRCUMFLEX", 
		"COMMERCIAL_AT", 
		"NUMBER_SIGN", 
		"APOSTROPHE", 
		"SPECIAL_FORM", 
		"EscapeSequence", 
		"STRING", 
		"REGEX_LITERAL", 
		"UnicodeEscape", 
		"OctalEscape", 
		"HEXDIGIT", 
		"NUMBER", 
		"CHARACTER", 
		"NIL", 
		"BOOLEAN", 
		"NAME", 
		"SYMBOL", 
		"METADATA_TYPEHINT", 
		"SYMBOL_HEAD", 
		"SYMBOL_REST", 
		"KEYWORD", 
		"SYNTAX_QUOTE", 
		"UNQUOTE_SPLICING", 
		"UNQUOTE", 
		"COMMENT", 
		"SPACE", 
		"LAMBDA_ARG"
    };

    public const int SYNTAX_QUOTE = 33;
    public const int KEYWORD = 32;
    public const int SYMBOL = 28;
    public const int METADATA_TYPEHINT = 29;
    public const int SYMBOL_HEAD = 30;
    public const int NUMBER = 23;
    public const int AMPERSAND = 6;
    public const int OPEN_PAREN = 4;
    public const int COMMERCIAL_AT = 13;
    public const int SPACE = 37;
    public const int EOF = -1;
    public const int CHARACTER = 24;
    public const int RIGHT_CURLY_BRACKET = 10;
    public const int LEFT_SQUARE_BRACKET = 7;
    public const int RIGHT_SQUARE_BRACKET = 8;
    public const int LEFT_CURLY_BRACKET = 9;
    public const int NAME = 27;
    public const int BOOLEAN = 26;
    public const int NIL = 25;
    public const int UNQUOTE = 35;
    public const int UnicodeEscape = 20;
    public const int LAMBDA_ARG = 38;
    public const int NUMBER_SIGN = 14;
    public const int SPECIAL_FORM = 16;
    public const int CLOSE_PAREN = 5;
    public const int SYMBOL_REST = 31;
    public const int APOSTROPHE = 15;
    public const int REGEX_LITERAL = 19;
    public const int COMMENT = 36;
    public const int OctalEscape = 21;
    public const int EscapeSequence = 17;
    public const int UNQUOTE_SPLICING = 34;
    public const int CIRCUMFLEX = 12;
    public const int STRING = 18;
    public const int HEXDIGIT = 22;
    public const int BACKSLASH = 11;

    // delegates
    // delegators



        public ClojureParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public ClojureParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        

    override public string[] TokenNames {
		get { return ClojureParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "C:\\Users\\Jon\\Desktop\\Clojure.g"; }
    }


      bool inLambda=false;
          int syntaxQuoteDepth = 0;

          ArrayList symbols = new ArrayList();
          public ArrayList getCollectedSymbols() { return symbols; }

          Hashtable parensMatching = new Hashtable(); 
          
          public int matchingParenForPosition(int position)
          {
            return (int) parensMatching[position];
          }
          
          public void clearParensMatching() { parensMatching.Clear(); }



    // $ANTLR start "literal"
    // C:\\Users\\Jon\\Desktop\\Clojure.g:140:1: literal : ( STRING | NUMBER | CHARACTER | NIL | BOOLEAN | KEYWORD );
    public void literal() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\Users\\Jon\\Desktop\\Clojure.g:140:8: ( STRING | NUMBER | CHARACTER | NIL | BOOLEAN | KEYWORD )
            // C:\\Users\\Jon\\Desktop\\Clojure.g:
            {
            	if ( input.LA(1) == STRING || (input.LA(1) >= NUMBER && input.LA(1) <= BOOLEAN) || input.LA(1) == KEYWORD ) 
            	{
            	    input.Consume();
            	    state.errorRecovery = false;
            	}
            	else 
            	{
            	    MismatchedSetException mse = new MismatchedSetException(null,input);
            	    throw mse;
            	}


            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "literal"


    // $ANTLR start "file"
    // C:\\Users\\Jon\\Desktop\\Clojure.g:183:1: file : ( form )* ;
    public void file() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\Users\\Jon\\Desktop\\Clojure.g:183:5: ( ( form )* )
            // C:\\Users\\Jon\\Desktop\\Clojure.g:184:9: ( form )*
            {
            	// C:\\Users\\Jon\\Desktop\\Clojure.g:184:9: ( form )*
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0 == OPEN_PAREN || (LA1_0 >= AMPERSAND && LA1_0 <= LEFT_SQUARE_BRACKET) || LA1_0 == LEFT_CURLY_BRACKET || (LA1_0 >= CIRCUMFLEX && LA1_0 <= SPECIAL_FORM) || (LA1_0 >= STRING && LA1_0 <= REGEX_LITERAL) || (LA1_0 >= NUMBER && LA1_0 <= BOOLEAN) || LA1_0 == SYMBOL || (LA1_0 >= KEYWORD && LA1_0 <= COMMENT) || LA1_0 == LAMBDA_ARG) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // C:\\Users\\Jon\\Desktop\\Clojure.g:184:11: form
            			    {
            			    	PushFollow(FOLLOW_form_in_file1319);
            			    	form();
            			    	state.followingStackPointer--;

            			    	 Console.WriteLine("form found"); 

            			    }
            			    break;

            			default:
            			    goto loop1;
            	    }
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements


            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "file"


    // $ANTLR start "form"
    // C:\\Users\\Jon\\Desktop\\Clojure.g:188:1: form : ({...}? LAMBDA_ARG | literal | COMMENT | AMPERSAND | ( metadataForm )? ( SPECIAL_FORM | s= SYMBOL | list | vector | map ) | macroForm | dispatchMacroForm | set );
    public void form() // throws RecognitionException [1]
    {   
        IToken s = null;

        try 
    	{
            // C:\\Users\\Jon\\Desktop\\Clojure.g:188:6: ({...}? LAMBDA_ARG | literal | COMMENT | AMPERSAND | ( metadataForm )? ( SPECIAL_FORM | s= SYMBOL | list | vector | map ) | macroForm | dispatchMacroForm | set )
            int alt4 = 8;
            alt4 = dfa4.Predict(input);
            switch (alt4) 
            {
                case 1 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:189:3: {...}? LAMBDA_ARG
                    {
                    	if ( !((this.inLambda)) ) 
                    	{
                    	    throw new FailedPredicateException(input, "form", "this.inLambda");
                    	}
                    	Match(input,LAMBDA_ARG,FOLLOW_LAMBDA_ARG_in_form1352); 

                    }
                    break;
                case 2 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:190:10: literal
                    {
                    	PushFollow(FOLLOW_literal_in_form1363);
                    	literal();
                    	state.followingStackPointer--;


                    }
                    break;
                case 3 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:192:7: COMMENT
                    {
                    	Match(input,COMMENT,FOLLOW_COMMENT_in_form1389); 

                    }
                    break;
                case 4 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:193:9: AMPERSAND
                    {
                    	Match(input,AMPERSAND,FOLLOW_AMPERSAND_in_form1399); 

                    }
                    break;
                case 5 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:194:9: ( metadataForm )? ( SPECIAL_FORM | s= SYMBOL | list | vector | map )
                    {
                    	// C:\\Users\\Jon\\Desktop\\Clojure.g:194:9: ( metadataForm )?
                    	int alt2 = 2;
                    	int LA2_0 = input.LA(1);

                    	if ( (LA2_0 == NUMBER_SIGN) )
                    	{
                    	    alt2 = 1;
                    	}
                    	switch (alt2) 
                    	{
                    	    case 1 :
                    	        // C:\\Users\\Jon\\Desktop\\Clojure.g:194:9: metadataForm
                    	        {
                    	        	PushFollow(FOLLOW_metadataForm_in_form1409);
                    	        	metadataForm();
                    	        	state.followingStackPointer--;


                    	        }
                    	        break;

                    	}

                    	// C:\\Users\\Jon\\Desktop\\Clojure.g:194:23: ( SPECIAL_FORM | s= SYMBOL | list | vector | map )
                    	int alt3 = 5;
                    	switch ( input.LA(1) ) 
                    	{
                    	case SPECIAL_FORM:
                    		{
                    	    alt3 = 1;
                    	    }
                    	    break;
                    	case SYMBOL:
                    		{
                    	    alt3 = 2;
                    	    }
                    	    break;
                    	case OPEN_PAREN:
                    		{
                    	    alt3 = 3;
                    	    }
                    	    break;
                    	case LEFT_SQUARE_BRACKET:
                    		{
                    	    alt3 = 4;
                    	    }
                    	    break;
                    	case LEFT_CURLY_BRACKET:
                    		{
                    	    alt3 = 5;
                    	    }
                    	    break;
                    		default:
                    		    NoViableAltException nvae_d3s0 =
                    		        new NoViableAltException("", 3, 0, input);

                    		    throw nvae_d3s0;
                    	}

                    	switch (alt3) 
                    	{
                    	    case 1 :
                    	        // C:\\Users\\Jon\\Desktop\\Clojure.g:194:25: SPECIAL_FORM
                    	        {
                    	        	Match(input,SPECIAL_FORM,FOLLOW_SPECIAL_FORM_in_form1414); 

                    	        }
                    	        break;
                    	    case 2 :
                    	        // C:\\Users\\Jon\\Desktop\\Clojure.g:194:40: s= SYMBOL
                    	        {
                    	        	s=(IToken)Match(input,SYMBOL,FOLLOW_SYMBOL_in_form1420); 
                    	        	 symbols.Add(s.Text); 

                    	        }
                    	        break;
                    	    case 3 :
                    	        // C:\\Users\\Jon\\Desktop\\Clojure.g:194:76: list
                    	        {
                    	        	PushFollow(FOLLOW_list_in_form1426);
                    	        	list();
                    	        	state.followingStackPointer--;


                    	        }
                    	        break;
                    	    case 4 :
                    	        // C:\\Users\\Jon\\Desktop\\Clojure.g:194:83: vector
                    	        {
                    	        	PushFollow(FOLLOW_vector_in_form1430);
                    	        	vector();
                    	        	state.followingStackPointer--;


                    	        }
                    	        break;
                    	    case 5 :
                    	        // C:\\Users\\Jon\\Desktop\\Clojure.g:194:92: map
                    	        {
                    	        	PushFollow(FOLLOW_map_in_form1434);
                    	        	map();
                    	        	state.followingStackPointer--;


                    	        }
                    	        break;

                    	}


                    }
                    break;
                case 6 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:195:9: macroForm
                    {
                    	PushFollow(FOLLOW_macroForm_in_form1446);
                    	macroForm();
                    	state.followingStackPointer--;


                    }
                    break;
                case 7 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:196:9: dispatchMacroForm
                    {
                    	PushFollow(FOLLOW_dispatchMacroForm_in_form1456);
                    	dispatchMacroForm();
                    	state.followingStackPointer--;


                    }
                    break;
                case 8 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:197:9: set
                    {
                    	PushFollow(FOLLOW_set_in_form1466);
                    	set();
                    	state.followingStackPointer--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "form"


    // $ANTLR start "macroForm"
    // C:\\Users\\Jon\\Desktop\\Clojure.g:200:1: macroForm : ( quoteForm | metaForm | derefForm | syntaxQuoteForm | {...}? unquoteSplicingForm | {...}? unquoteForm );
    public void macroForm() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\Users\\Jon\\Desktop\\Clojure.g:200:10: ( quoteForm | metaForm | derefForm | syntaxQuoteForm | {...}? unquoteSplicingForm | {...}? unquoteForm )
            int alt5 = 6;
            switch ( input.LA(1) ) 
            {
            case APOSTROPHE:
            	{
                alt5 = 1;
                }
                break;
            case CIRCUMFLEX:
            	{
                alt5 = 2;
                }
                break;
            case COMMERCIAL_AT:
            	{
                alt5 = 3;
                }
                break;
            case SYNTAX_QUOTE:
            	{
                alt5 = 4;
                }
                break;
            case UNQUOTE_SPLICING:
            	{
                alt5 = 5;
                }
                break;
            case UNQUOTE:
            	{
                alt5 = 6;
                }
                break;
            	default:
            	    NoViableAltException nvae_d5s0 =
            	        new NoViableAltException("", 5, 0, input);

            	    throw nvae_d5s0;
            }

            switch (alt5) 
            {
                case 1 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:201:9: quoteForm
                    {
                    	PushFollow(FOLLOW_quoteForm_in_macroForm1497);
                    	quoteForm();
                    	state.followingStackPointer--;


                    }
                    break;
                case 2 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:202:9: metaForm
                    {
                    	PushFollow(FOLLOW_metaForm_in_macroForm1507);
                    	metaForm();
                    	state.followingStackPointer--;


                    }
                    break;
                case 3 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:203:9: derefForm
                    {
                    	PushFollow(FOLLOW_derefForm_in_macroForm1517);
                    	derefForm();
                    	state.followingStackPointer--;


                    }
                    break;
                case 4 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:204:9: syntaxQuoteForm
                    {
                    	PushFollow(FOLLOW_syntaxQuoteForm_in_macroForm1527);
                    	syntaxQuoteForm();
                    	state.followingStackPointer--;


                    }
                    break;
                case 5 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:205:7: {...}? unquoteSplicingForm
                    {
                    	if ( !(( this.syntaxQuoteDepth > 0 )) ) 
                    	{
                    	    throw new FailedPredicateException(input, "macroForm", " this.syntaxQuoteDepth > 0 ");
                    	}
                    	PushFollow(FOLLOW_unquoteSplicingForm_in_macroForm1537);
                    	unquoteSplicingForm();
                    	state.followingStackPointer--;


                    }
                    break;
                case 6 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:206:7: {...}? unquoteForm
                    {
                    	if ( !(( this.syntaxQuoteDepth > 0 )) ) 
                    	{
                    	    throw new FailedPredicateException(input, "macroForm", " this.syntaxQuoteDepth > 0 ");
                    	}
                    	PushFollow(FOLLOW_unquoteForm_in_macroForm1547);
                    	unquoteForm();
                    	state.followingStackPointer--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "macroForm"


    // $ANTLR start "dispatchMacroForm"
    // C:\\Users\\Jon\\Desktop\\Clojure.g:209:1: dispatchMacroForm : ( REGEX_LITERAL | varQuoteForm | {...}? lambdaForm );
    public void dispatchMacroForm() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\Users\\Jon\\Desktop\\Clojure.g:209:18: ( REGEX_LITERAL | varQuoteForm | {...}? lambdaForm )
            int alt6 = 3;
            int LA6_0 = input.LA(1);

            if ( (LA6_0 == REGEX_LITERAL) )
            {
                alt6 = 1;
            }
            else if ( (LA6_0 == NUMBER_SIGN) )
            {
                int LA6_2 = input.LA(2);

                if ( (LA6_2 == APOSTROPHE) )
                {
                    alt6 = 2;
                }
                else if ( (LA6_2 == OPEN_PAREN) )
                {
                    alt6 = 3;
                }
                else 
                {
                    NoViableAltException nvae_d6s2 =
                        new NoViableAltException("", 6, 2, input);

                    throw nvae_d6s2;
                }
            }
            else 
            {
                NoViableAltException nvae_d6s0 =
                    new NoViableAltException("", 6, 0, input);

                throw nvae_d6s0;
            }
            switch (alt6) 
            {
                case 1 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:210:9: REGEX_LITERAL
                    {
                    	Match(input,REGEX_LITERAL,FOLLOW_REGEX_LITERAL_in_dispatchMacroForm1574); 

                    }
                    break;
                case 2 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:211:9: varQuoteForm
                    {
                    	PushFollow(FOLLOW_varQuoteForm_in_dispatchMacroForm1584);
                    	varQuoteForm();
                    	state.followingStackPointer--;


                    }
                    break;
                case 3 :
                    // C:\\Users\\Jon\\Desktop\\Clojure.g:212:9: {...}? lambdaForm
                    {
                    	if ( !((!this.inLambda)) ) 
                    	{
                    	    throw new FailedPredicateException(input, "dispatchMacroForm", "!this.inLambda");
                    	}
                    	PushFollow(FOLLOW_lambdaForm_in_dispatchMacroForm1596);
                    	lambdaForm();
                    	state.followingStackPointer--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "dispatchMacroForm"


    // $ANTLR start "list"
    // C:\\Users\\Jon\\Desktop\\Clojure.g:215:1: list : o= OPEN_PAREN ( form )* c= CLOSE_PAREN ;
    public void list() // throws RecognitionException [1]
    {   
        IToken o = null;
        IToken c = null;

        try 
    	{
            // C:\\Users\\Jon\\Desktop\\Clojure.g:215:5: (o= OPEN_PAREN ( form )* c= CLOSE_PAREN )
            // C:\\Users\\Jon\\Desktop\\Clojure.g:215:9: o= OPEN_PAREN ( form )* c= CLOSE_PAREN
            {
            	o=(IToken)Match(input,OPEN_PAREN,FOLLOW_OPEN_PAREN_in_list1617); 
            	// C:\\Users\\Jon\\Desktop\\Clojure.g:215:22: ( form )*
            	do 
            	{
            	    int alt7 = 2;
            	    int LA7_0 = input.LA(1);

            	    if ( (LA7_0 == OPEN_PAREN || (LA7_0 >= AMPERSAND && LA7_0 <= LEFT_SQUARE_BRACKET) || LA7_0 == LEFT_CURLY_BRACKET || (LA7_0 >= CIRCUMFLEX && LA7_0 <= SPECIAL_FORM) || (LA7_0 >= STRING && LA7_0 <= REGEX_LITERAL) || (LA7_0 >= NUMBER && LA7_0 <= BOOLEAN) || LA7_0 == SYMBOL || (LA7_0 >= KEYWORD && LA7_0 <= COMMENT) || LA7_0 == LAMBDA_ARG) )
            	    {
            	        alt7 = 1;
            	    }


            	    switch (alt7) 
            		{
            			case 1 :
            			    // C:\\Users\\Jon\\Desktop\\Clojure.g:215:22: form
            			    {
            			    	PushFollow(FOLLOW_form_in_list1619);
            			    	form();
            			    	state.followingStackPointer--;


            			    }
            			    break;

            			default:
            			    goto loop7;
            	    }
            	} while (true);

            	loop7:
            		;	// Stops C# compiler whining that label 'loop7' has no statements

            	c=(IToken)Match(input,CLOSE_PAREN,FOLLOW_CLOSE_PAREN_in_list1625);

                parensMatching.Add(o.TokenIndex, c.TokenIndex);
                parensMatching.Add(c.TokenIndex, o.TokenIndex);


            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "list"


    // $ANTLR start "vector"
    // C:\\Users\\Jon\\Desktop\\Clojure.g:222:1: vector : LEFT_SQUARE_BRACKET ( form )* RIGHT_SQUARE_BRACKET ;
    public void vector() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\Users\\Jon\\Desktop\\Clojure.g:222:7: ( LEFT_SQUARE_BRACKET ( form )* RIGHT_SQUARE_BRACKET )
            // C:\\Users\\Jon\\Desktop\\Clojure.g:222:10: LEFT_SQUARE_BRACKET ( form )* RIGHT_SQUARE_BRACKET
            {
            	Match(input,LEFT_SQUARE_BRACKET,FOLLOW_LEFT_SQUARE_BRACKET_in_vector1644); 
            	// C:\\Users\\Jon\\Desktop\\Clojure.g:222:30: ( form )*
            	do 
            	{
            	    int alt8 = 2;
            	    int LA8_0 = input.LA(1);

            	    if ( (LA8_0 == OPEN_PAREN || (LA8_0 >= AMPERSAND && LA8_0 <= LEFT_SQUARE_BRACKET) || LA8_0 == LEFT_CURLY_BRACKET || (LA8_0 >= CIRCUMFLEX && LA8_0 <= SPECIAL_FORM) || (LA8_0 >= STRING && LA8_0 <= REGEX_LITERAL) || (LA8_0 >= NUMBER && LA8_0 <= BOOLEAN) || LA8_0 == SYMBOL || (LA8_0 >= KEYWORD && LA8_0 <= COMMENT) || LA8_0 == LAMBDA_ARG) )
            	    {
            	        alt8 = 1;
            	    }


            	    switch (alt8) 
            		{
            			case 1 :
            			    // C:\\Users\\Jon\\Desktop\\Clojure.g:222:30: form
            			    {
            			    	PushFollow(FOLLOW_form_in_vector1646);
            			    	form();
            			    	state.followingStackPointer--;


            			    }
            			    break;

            			default:
            			    goto loop8;
            	    }
            	} while (true);

            	loop8:
            		;	// Stops C# compiler whining that label 'loop8' has no statements

            	Match(input,RIGHT_SQUARE_BRACKET,FOLLOW_RIGHT_SQUARE_BRACKET_in_vector1649); 

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end "vector"


    // $ANTLR start "map"
    // C:\\Users\\Jon\\Desktop\\Clojure.g:225:1: map : LEFT_CURLY_BRACKET ( form form )* RIGHT_CURLY_BRACKET ;
    public void map() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\Users\\Jon\\Desktop\\Clojure.g:225:4: ( LEFT_CURLY_BRACKET ( form form )* RIGHT_CURLY_BRACKET )
            // C:\\Users\\Jon\\Desktop\\Clojure.g:225:9: LEFT_CURLY_BRACKET ( form form )* RIGHT_CURLY_BRACKET
            {
            	Match(input,LEFT_CURLY_BRACKET,FOLLOW_LEFT_CURLY_BRACKET_in_map1668); 
            	// C:\\Users\\Jon\\Desktop\\Clojure.g:225:28: ( form form )*
            	do 
            	{
            	    int alt9 = 2;
            	    int LA9_0 = input.LA(1);

            	    if ( (LA9_0 == OPEN_PAREN || (LA9_0 >= AMPERSAND && LA9_0 <= LEFT_SQUARE_BRACKET) || LA9_0 == LEFT_CURLY_BRACKET || (LA9_0 >= CIRCUMFLEX && LA9_0 <= SPECIAL_FORM) || (LA9_0 >= STRING && LA9_0 <= REGEX_LITERAL) || (LA9_0 >= NUMBER && LA9_0 <= BOOLEAN) || LA9_0 == SYMBOL || (LA9_0 >= KEYWORD && LA9_0 <= COMMENT) || LA9_0 == LAMBDA_ARG) )
            	    {
            	        alt9 = 1;
            	    }

